--- a/single-price-grid/public/index.html
+++ b/single-price-grid/public/index.html
@@ -12,10 +12,10 @@
 
 </head>
 
-<body class="bg-lightGray font-body m-6 ">
+<body class="bg-lightGray font-body m-6 md:w-full md:ml-80 md:mt-28 md:relative">
   <div class="md:"> <!--wrapper-->
 
-    <div class="bg-white pl-5 pt-5 pb-5 md:w-1/2">
+    <div class="bg-white pl-5 pt-5 pb-5 md:w-1/2 md:pl-10">
       <h1 class="text-cyan text-2xl font-bold tracking-wide pb-4">
         Join our community
       </h1>
@@ -30,7 +30,7 @@
 
     <div class="md:flex md:w-1/2 "> <!--for lg devices-->
 
-    <div class="bg-cyan pl-5 pt-5 pb-5 text-white md:w-1/2">
+    <div class="bg-cyan pl-5 pt-5 pb-5 text-white md:w-1/2 md:pl-10">
       <h1 class="text-xl tracking-wide pb-3">
          Monthly Subscription
       </h1>
@@ -38,15 +38,15 @@
       <div class="pb-2 flex space-x-3">
         <p class="text-3xl font-bold">$29</p> <p class="text-lg text-grayishBlue">per month</p>
       </div>
-      <p class="text-lg pb-4 text-gray-300">
+      <p class="text-lg pb-4  text-gray-300">
         Full access for less than &dollar;1 a day
       </p>
-      <button class="bg-brightYellow pt-4 pb-4 pl-28 pr-28 font-bold rounded-lg shadow-md">
+      <button class="bg-brightYellow pt-4 md:mt-6 pb-4 pl-28 pr-28 font-bold rounded-lg shadow-md">
         Sign Up
       </button>
     </div>
 
-    <div class="bg-teal-500 p-5 md:w-1/2">
+    <div class="bg-teal-500 p-5 md:w-1/2 md:pl-10">
       <h1 class="text-white text-xl pb-4">
         Why Us
       </h1>
