added hover effects

--- a/single-price-grid/public/index.html
+++ b/single-price-grid/public/index.html
@@ -41,7 +41,7 @@
       <p class="text-lg pb-4  text-gray-300">
         Full access for less than &dollar;1 a day
       </p>
-      <button class="bg-brightYellow pt-4 md:mt-6 pb-4 pl-28 pr-28 font-bold rounded-lg shadow-md">
+      <button class="bg-brightYellow pt-4 md:mt-6 pb-4 pl-28 pr-28 font-bold rounded-lg shadow-md hover:bg-transparent hover:text-yellow-500 hover:text-xl">
         Sign Up
       </button>
     </div>
