--- a/single-price-grid/public/index.html
+++ b/single-price-grid/public/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="bg-lightGray font-body m-6 md:w-full md:ml-96 md:mt-28 md:relative">
-  <div class="md:"> <!--wrapper-->
+  <main class="md:"> <!--wrapper-->
 
     <div class="bg-white pl-5 pt-5 pb-5 md:w-1/2 md:pl-10">
       <h1 class="text-cyan text-2xl font-bold tracking-wide pb-4">
@@ -65,7 +65,7 @@
 
 
 
-  </div>
+  </main>
 
 
 
